@@ -1,14 +1,14 @@
 {"frames": [
     {
         "module": "",
-        "in_app": true,
+        "in_app": false,
         "function": "",
         "filename": "File.java",
         "lineno": 0
     },
     {
         "module": "",
-        "in_app": true,
+        "in_app": false,
         "function": "",
         "filename": "File.java",
         "lineno": 0
